examples/test/testpolicy16046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16046
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key22: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value24
      podSelector:
        matchLabels:
          key7: value0
          key10: value22
          key9: value37
